backend/apigateway-crd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-route
  namespace: default
spec:
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - headers:
            - name: x-nexus-user-id
              value: "123"
      backendRefs:
        - name: blue
          port: 80
    - matches:
        - headers:
            - name: host
              value: example.com
      backendRefs:
        - name: green
          port: 80
    - backendRefs:
        - name: blue
          port: 80
